fix: experiemnting with truncation

--- a/packages/vue-component-library/src/styles/default/_block-staff-article-item.scss
+++ b/packages/vue-component-library/src/styles/default/_block-staff-article-item.scss
@@ -7,6 +7,7 @@
   align-items: center;
   width: 100%;
   position: relative;
+  background-color: white;
 
   margin-bottom: var(--space-xl);
   padding-bottom: var(--space-xl);
@@ -36,6 +37,7 @@
   .meta {
     width: calc(50% - var(--space-xl));
     height: 272px;
+    background-color: aqua;
   }
 
   .category {
@@ -61,16 +63,37 @@
     flex-wrap: wrap;
   }
 
+  // .description {
+  //   @include step-0;
+  //   color: var(--color-black);
+  //   color: green;
+  //   //@include truncate(4);
+  // }
+
+  // .description-summary-only {
+  //   @include step-0;
+  //   color: var(--color-black);
+  //   color: hotpink;
+  //   @include truncate(5);
+  // }
+
   .description {
     @include step-0;
     color: var(--color-black);
-    @include truncate(4);
+    display: block;
+    overflow: visible;
+    max-height: none;
+    -webkit-line-clamp: unset;
   }
 
   .description-summary-only {
     @include step-0;
     color: var(--color-black);
-    @include truncate(5);
+    display: block; // remove -webkit-box
+    overflow: visible; // allow text to expand
+    max-height: none; // remove line-limit
+    -webkit-line-clamp: unset;
+    color: hotpink;
   }
 
   :deep(.image) {
